# CourseWorkROS2

./: .gitignore  README.md  coursework_eye_node.py  coursework_nav_node.py  eye_node.py  minitask1.py  minitask2_p1.py  minitask2_p2.py  minitsak2_l.py  nav_node.py
eye_package/: package.xml  setup.py
eye_package/eye_package/: eye_node.py
eye_package/launch/: mt3.launch.py
nav_package/: package.xml  setup.py
nav_package/nav_package/: nav_node.py
