<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_package</name>
  <version>0.0.0</version>
  <description>Navigation package for MT3</description>

  <maintainer email="jason@todo.todo">jason</maintainer>
  <license>Apache-2.0</license>

  <!-- 运行 nav_node 必须的依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <!-- 如果之后使用 launch 文件，还需要 -->
  <exec_depend>ros2launch</exec_depend>

  <!-- 测试依赖（可保留） -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
